force-app/main/default/objects/Pipeline__c/fields/Build_and_Deploy_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Build_and_Deploy_Organizations__c</fullName>
    <label>Build and Deploy Organizations</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>