force-app/main/default/objects/Pipeline__c/fields/Delta_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Delta_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, it deploys only the components not yet deployed to the specified Target Org.</inlineHelpText>
    <label>Enable Delta Deployment</label>
    <type>Checkbox</type>
</CustomField>