force-app/main/default/objects/Pipeline__c/fields/Deploy_entire_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Deploy_entire_Permission_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If your branch contains only permission set(s), please enable this setting.</inlineHelpText>
    <label>Deploy Entire Permission Set</label>
    <type>Checkbox</type>
</CustomField>