force-app/main/default/objects/Pipeline__c/fields/Deploy_entire_profile__c.field-meta.xml
<CustomField>
    <fullName>Deploy_entire_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If your branch contains only profile(s), please enable this setting.</inlineHelpText>
    <label>Deploy Entire Profile</label>
    <type>Checkbox</type>
</CustomField>