force-app/main/default/objects/Pipeline__c/fields/Full_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Full_Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deploy the entire branch</description>
    <inlineHelpText>Deploy the entire branch. Make sure that delta deployment is not enabled.</inlineHelpText>
    <label>Full Deploy</label>
    <type>Checkbox</type>
</CustomField>