force-app/main/default/objects/Pipeline__c/fields/Manual__c.field-meta.xml
<CustomField>
    <fullName>Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual run pipeline</description>
    <inlineHelpText>Check to start the pipeline manually only.</inlineHelpText>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>