force-app/main/default/objects/Pipeline__c/fields/Specified_Tests__c.field-meta.xml
<CustomField>
    <fullName>Specified_Tests__c</fullName>
    <label>Specified Tests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>